# procon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml  justfile  justfile.help.sh
.cargo/: config.toml
src/: action.rs  config.rs  instance.rs  lib.rs  main.rs  multi.rs  project.rs
test/: generations.toml  hashes.toml  state.ron
test/managers/: cargo.toml
test/modules/: rust.toml
test/projects/: airwave.toml  my-project.toml  thedevbird.toml
test/projects/portfolio/: procon.toml
