[package]
name = "procon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
ignore = "0.4.23"
internment = { version = "0.8.6", features = ["serde"] }
ron = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
systemctl = "0.5.0"
toml = "0.9.5"
