[package]
name = "procon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
ignore = "0.4.23"
internment = { version = "0.8.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_norway = "0.9.42"
systemctl = "0.5.0"
